@@ -30,6 +30,8 @@
       <id>itext</id>
       <url>https://repo.itextsupport.com/releases</url>
     </repository>
+
+
   </repositories>
 
   <dependencyManagement>
@@ -218,10 +220,37 @@
       <version>24.4.0</version> <!-- Use the latest version -->
     </dependency>
 
+
+    <!-- WebSocket client dependency -->
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.5.2</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-web</artifactId>
       <version>17.0.2</version> <!-- Use the version matching your JavaFX version -->
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version> <!-- ou une autre version récente -->
+    </dependency>
+    
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.5.5</version>
     </dependency>
 
   </dependencies>
@@ -240,6 +269,14 @@
             <arg>pidev=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
             <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+            <arg>--add-opens</arg>
+            <arg>java.base/java.lang=ALL-UNNAMED</arg>
+            <arg>--add-opens</arg>
+            <arg>java.base/java.util=ALL-UNNAMED</arg>
+            <arg>--add-opens</arg>
+            <arg>java.base/java.net=ALL-UNNAMED</arg>
+            <arg>--add-opens</arg>
+            <arg>java.base/java.io=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -270,6 +307,30 @@
           </resources>
         </configuration>
       </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>org.example.pidev.test.MainFX</mainClass> <!-- Replace with your real main class -->
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id> 
+                    <phase>package</phase> 
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
